crates/keron-lang/tests/corpus/errors/check/struct_default_required_after_default.snap
---
source: crates/keron-lang/tests/harness/mod.rs
assertion_line: 75
---
error: required fields must come before defaulted fields
  --> 6:3
  |
6 |   b: Int,
  |   ^^^^^^
